fix svg behaviour on zoom and zoomout on mobile and desktop

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -7,6 +7,7 @@ body{
   font-family: "Helios-Cond-Regular", "Helvetica Neue";
   line-height: 1;
   overflow: hidden;
+  min-width: 812px;
 }
 
 header {
